syntax = "proto3";

package org.apache.camel.example.springboot.numbers.common.model;

option java_multiple_files = true;

message ControlMessage {
  string action = 1;
  string subscriberId = 2;
  string subscribeUri = 3;
  string routingChannel = 4;
  int32 subscriptionPriority = 5;
  string predicate = 6;
  string expressionLanguage = 7;
  string consumeUri = 8;
  string commandUri = 9;
}
